--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
-</head>
-
-<body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
-</body>
-
-</html>
+<script>
+	var search =window.location.search;
+	var hash =window.location.hash;
+	if (hash==null || hash.length<10){
+		if(search==null || search.length<10){
+			rdt=false
+		}else{
+			rdt=search
+			if (rdt.indexOf('-') > -1){
+				var a=search.split("-")
+				if(a[0]=="?c"){
+					rdt="?itm_cadaz=c&"
+				}else if(a[0]=="?u"){
+					rdt="?itm_cadaz=u&"
+				}
+				var s=a[1].split("_")
+				rdt+="subid="+s[0]+"&"
+				rdt+="icy="+s[1]
+			}
+		}
+	}else{
+		rdt=hash.replace("#","")
+	}
+	if(rdt==false){
+		var d="404"
+	}else{
+		var d="http://host.axcelis.me.uk/"+rdt;
+	}
+	window.location.replace(d);
+</script>
