--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 	if(rdt==false){
 		var d="404"
 	}else{
-		var d="http://host.axcelis.me.uk/"+rdt;
+		var d="http://pac.consultingskills.org/"+rdt;
 	}
 	window.location.replace(d);
 </script>
